Fixed tag alignment

--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -64,6 +64,7 @@
 
 .tags {
     @extend clear;
+    margin-bottom: 5px;
     span {
         font-family: "Poppins", Helvetica, Arial, sans-serif;
         float: left;
@@ -75,14 +76,15 @@
         background: #565e92;
         text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
         box-shadow: inset 0 0 1px rgba(218, 219, 228, 0.15);
-        margin-bottom: 10px;
+        margin-bottom: 5px;
+        margin-right: 4px;
         
         @include mobile {
             font-size: 12px;
         }
 
         & + span {
-            margin-left: 4px;
+            margin-left: 0px;
         }
 
         &.primary {
